style thumbnails, add useLoading hook to fade in thumbnail after pic loads

--- a/src/style/index.scss
+++ b/src/style/index.scss
@@ -1,3 +1,15 @@
 body {
     font-family: Helvetica, Arial, sans-serif;
 }
+
+.transition {
+    transition:opacity 1s linear;
+}
+
+.loading {
+    opacity: 0;
+}
+  
+.done {
+    opacity: 1;
+}
