create CartItem, get cart functionality working including price and price total display

--- a/src/style/index.scss
+++ b/src/style/index.scss
@@ -57,4 +57,19 @@ header > a {
 
 .min-height-container {
     min-height: 100vh;
-  }
+}
+
+
+// cart
+
+.cart-item {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin: 20px 0;
+}
+
+.cart-item img {
+    margin-right: auto;
+    margin-left: 10px;   
+}
