prevent adding something already in cart. Add name to cartItem

--- a/src/style/index.scss
+++ b/src/style/index.scss
@@ -73,3 +73,8 @@ header > a {
     margin-right: auto;
     margin-left: 10px;   
 }
+
+.cart-page .total-cost {
+    text-align: right;
+    font-size: 1.3em;
+}
